--- a/02_landingPage/login.html
+++ b/02_landingPage/login.html
@@ -20,14 +20,14 @@
                 <p>Bem vindo(a). Faça o login e acesse sua conta</p>
                 <form action="login">
                     <div class="campo">
-                        <label for="login">Login</label>
-                        <input type="email" name="login" id="login" placeholder=" Seu e-mail" required maxlength="25">                      
+                        <label for="login"></label>
+                        <input type="email" name="login" id="login" placeholder=" Informe seu email" required maxlength="25">                      
                     </div>
                     <div class="campo">
-                        <label for="senha">Senha</label>
-                        <input type="password" name="senha" id="senha" placeholder=" Sua senha" required minlength="4" maxlength="8">                    
+                        <label for="senha"></label>
+                        <input type="password" name="senha" id="senha" placeholder=" Informe sua senha" required minlength="4" maxlength="8">                    
                     </div>
-                    <input type="submit" value="Entrar">
+                    <input type="submit" value="Entrar" id="entrar">
                     <a href="#" id="btn">Lembrar senha</a>
                 </form>
             </div>
