--- a/02_landingPage/login.html
+++ b/02_landingPage/login.html
@@ -28,7 +28,7 @@
                         <input type="password" name="senha" id="senha" placeholder=" Informe sua senha" required minlength="4" maxlength="8">                    
                     </div>
                     <input type="submit" value="Entrar" id="entrar">
-                    <a href="#" id="btn">Lembrar senha</a>
+                    <a href="index.html" id="btn" >Lembrar senha</a>
                 </form>
             </div>
             
