--- a/02_landingPage/index.html
+++ b/02_landingPage/index.html
@@ -132,7 +132,7 @@
     <section>
         <div class="testimonials">
             <div class="inner">
-                <h3>Testimonials</h3>
+                <h3>Depoimentos</h3>
                 <div class="border"></div>
             </div>
 
@@ -238,7 +238,7 @@
 
                 </div>
 
-                <button type="submit" onclick="validacao()">Enviar</button>
+                 <button type="submit" onclick="validacao()">Enviar</button> 
             </form>
         </div>
     </section>
